--- a/gradle.properties
+++ b/gradle.properties
@@ -4,7 +4,7 @@ org.gradle.jvmargs=-Xmx1G
 # Fabric Properties
 	# check these on https://fabricmc.net/versions.html
 	minecraft_version=1.18.2
-	yarn_mappings=1.18.2+build.2
+	quilt_mappings=3
 	loader_version=0.13.3
 
 # Mod Properties
@@ -14,3 +14,5 @@ org.gradle.jvmargs=-Xmx1G
 
 # Dependencies
 	fabric_version=0.48.0+1.18.2
+	cca_version=4.1.4
+	trinkets_version=3.3.0
