--- a/gradle.properties
+++ b/gradle.properties
@@ -8,7 +8,7 @@ org.gradle.jvmargs=-Xmx1G
 	loader_version=0.13.3
 
 # Mod Properties
-	mod_version = v1_01
+	mod_version = v0.1.0
 	maven_group = ca.rttv
 	archives_base_name = malum-fabric
 
