--- a/gradle.properties
+++ b/gradle.properties
@@ -8,7 +8,7 @@ org.gradle.jvmargs=-Xmx1G
 	loader_version=0.13.3
 
 # Mod Properties
-	mod_version = v0.1.0
+	mod_version = 0.1.1
 	maven_group = ca.rttv
 	archives_base_name = malum-fabric
 
@@ -16,3 +16,4 @@ org.gradle.jvmargs=-Xmx1G
 	fabric_version=0.48.0+1.18.2
 	cca_version=4.1.4
 	trinkets_version=3.3.0
+	terraform_wood_api_version=3.0.0
