--- a/build.gradle
+++ b/build.gradle
@@ -25,6 +25,7 @@ repositories {
 		name = "Ladysnake Libs"
 		url = "https://ladysnake.jfrog.io/artifactory/mods"
 	}
+	maven { url = "https://jitpack.io" }
 }
 
 loom {
@@ -49,6 +50,10 @@ dependencies {
 	modImplementation "dev.emi:trinkets:${project.trinkets_version}"
 	modImplementation "dev.onyxstudios.cardinal-components-api:cardinal-components-base:${project.cca_version}"
 	modImplementation "dev.onyxstudios.cardinal-components-api:cardinal-components-entity:${project.cca_version}"
+	modImplementation("com.github.Chocohead:Fabric-ASM:v${project.fabric_asm_version}") {
+		exclude (group: "net.fabricmc.fabric-api")
+	}
+	include("com.github.Chocohead:Fabric-ASM:v${project.fabric_asm_version}")
 }
 
 processResources {
