--- a/gradle.properties
+++ b/gradle.properties
@@ -14,6 +14,7 @@ org.gradle.jvmargs=-Xmx1G
 
 # Dependencies
 	fabric_version=0.48.0+1.18.2
+	fabric_asm_version=2.3
 	cca_version=4.1.4
 	trinkets_version=3.3.0
 	terraform_wood_api_version=3.0.0
