--- a/build.gradle
+++ b/build.gradle
@@ -18,6 +18,10 @@ repositories {
 		url = 'https://maven.quiltmc.org/repository/snapshot'
 	}
 	maven {
+		name = "TerraformersMC"
+		url = "https://maven.terraformersmc.com/"
+	}
+	maven {
 		name = "Ladysnake Libs"
 		url = "https://ladysnake.jfrog.io/artifactory/mods"
 	}
