--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,6 @@
 plugins {
-	id 'fabric-loom' version '0.10-SNAPSHOT'
-	id 'io.github.juuxel.loom-quiltflower' version '1.7.0'
+	id 'fabric-loom' version '0.11.+'
+	id 'io.github.juuxel.loom-quiltflower' version '1.6.1'
 	id 'org.quiltmc.quilt-mappings-on-loom' version '4.0.0'
 	id 'maven-publish'
 }
@@ -25,8 +25,14 @@ repositories {
 		name = "Ladysnake Libs"
 		url = "https://ladysnake.jfrog.io/artifactory/mods"
 	}
+	maven {
+		name = 'VRAM'
+		url = 'https://maven.vram.io/'
+	}
+
 	maven { url = "https://jitpack.io" }
-}
+	mavenCentral()
+	}
 
 loom {
 	accessWidenerPath = file("src/main/resources/malum.accesswidener")
@@ -36,17 +42,15 @@ dependencies {
 	// To change the versions see the gradle.properties file
 	minecraft "com.mojang:minecraft:${project.minecraft_version}"
 	mappings(loom.layered {
-		it.officialMojangMappings {
-			setNameSyntheticMembers(false)
-		}
-		it.addLayer(quiltMappings.mappings("org.quiltmc:quilt-mappings:${minecraft_version}+build.${project.quilt_mappings}:v2"))
+		addLayer(quiltMappings.mappings("org.quiltmc:quilt-mappings:${minecraft_version}+build.${project.quilt_mappings}:v2"))
 	})
 	modImplementation "net.fabricmc:fabric-loader:${project.loader_version}"
 
 	modImplementation "net.fabricmc.fabric-api:fabric-api:${project.fabric_version}"
-	modImplementation "dev.emi:trinkets:${project.trinkets_version}"
-	modImplementation "io.github.ladysnake:satin:${project.satin_version}"
-	include "io.github.ladysnake:satin:${project.satin_version}"
+	modImplementation("dev.emi:trinkets:${project.trinkets_version}") {
+		exclude group: 'net.fabricmc'
+		exclude group: 'net.fabricmc.fabric-api'
+	}
 	modImplementation "dev.onyxstudios.cardinal-components-api:cardinal-components-base:${project.cca_version}"
 	modImplementation "dev.onyxstudios.cardinal-components-api:cardinal-components-entity:${project.cca_version}"
 	modImplementation("com.github.Chocohead:Fabric-ASM:v${project.fabric_asm_version}") {
