--- a/build.gradle
+++ b/build.gradle
@@ -25,11 +25,6 @@ repositories {
 		name = "Ladysnake Libs"
 		url = "https://ladysnake.jfrog.io/artifactory/mods"
 	}
-	maven {
-		name = 'VRAM'
-		url = 'https://maven.vram.io/'
-	}
-
 	maven { url = "https://jitpack.io" }
 	mavenCentral()
 	}
@@ -42,7 +37,7 @@ dependencies {
 	// To change the versions see the gradle.properties file
 	minecraft "com.mojang:minecraft:${project.minecraft_version}"
 	mappings(loom.layered {
-		addLayer(quiltMappings.mappings("org.quiltmc:quilt-mappings:${minecraft_version}+build.${project.quilt_mappings}:v2"))
+		addLayer(quiltMappings.mappings("org.quiltmc:quilt-mappings:${project.minecraft_version}+build.${project.quilt_mappings}:v2"))
 	})
 	modImplementation "net.fabricmc:fabric-loader:${project.loader_version}"
 
