--- a/build.gradle
+++ b/build.gradle
@@ -25,6 +25,11 @@ repositories {
 		name = "Ladysnake Libs"
 		url = "https://ladysnake.jfrog.io/artifactory/mods"
 	}
+	maven {
+		name = "Modrinth"
+		url = "https://api.modrinth.com/maven"
+		content { includeGroup "maven.modrinth" }
+	}
 	maven { url = "https://jitpack.io" }
 	mavenCentral()
 	}
@@ -52,6 +57,9 @@ dependencies {
 		exclude (group: "net.fabricmc.fabric-api")
 	}
 	include("com.github.Chocohead:Fabric-ASM:v${project.fabric_asm_version}")
+	modImplementation "maven.modrinth:isnrmn:v1_02"
+	implementation("com.github.LlamaLad7:MixinExtras:0.0.8")
+	annotationProcessor("com.github.LlamaLad7:MixinExtras:0.0.8")
 }
 
 processResources {
