--- a/gradle.properties
+++ b/gradle.properties
@@ -17,3 +17,5 @@ org.gradle.jvmargs=-Xmx1G
 	fabric_asm_version=2.3
 	cca_version=4.1.4
 	trinkets_version=3.3.0
+    isnrmn_version=1_01
+    mixin_extras_version=0.0.8
