--- a/build.gradle
+++ b/build.gradle
@@ -1,14 +1,10 @@
 plugins {
-	id 'fabric-loom' version '0.12-SNAPSHOT'
-	id 'org.quiltmc.quilt-mappings-on-loom' version '4.2.0'
 	id 'maven-publish'
+	alias(libs.plugins.quilt.loom)
 }
 
-sourceCompatibility = JavaVersion.VERSION_17
-targetCompatibility = JavaVersion.VERSION_17
-
 archivesBaseName = project.archives_base_name
-version = project.mod_version
+version = project.version
 group = project.maven_group
 
 repositories {
@@ -27,52 +23,71 @@ repositories {
 	maven {
 		name = "Modrinth"
 		url = "https://api.modrinth.com/maven"
-		content {includeGroup "maven.modrinth"}
+		content {
+			includeGroup "maven.modrinth"
+		}
 	}
 	maven { url = "https://jitpack.io" }
 	mavenCentral()
-	}
+}
 
 loom {
 	accessWidenerPath = file("src/main/resources/malum.accesswidener")
 }
 
 dependencies {
-	minecraft "com.mojang:minecraft:${project.minecraft_version}"
-	mappings(loom.layered {
-		addLayer(quiltMappings.mappings("org.quiltmc:quilt-mappings:${project.minecraft_version}+build.${project.quilt_mappings}:v2"))
-	})
-	modImplementation "net.fabricmc:fabric-loader:${project.loader_version}"
+	minecraft libs.minecraft
+	mappings loom.layered {
+		addLayer quiltMappings.mappings("org.quiltmc:quilt-mappings:${libs.versions.quilt.mappings.get()}:v2")
+	}
+	modImplementation libs.quilt.loader
 
-	modImplementation "net.fabricmc.fabric-api:fabric-api:${project.fabric_version}"
+	modImplementation libs.quilted.fabric.api
 	modImplementation("dev.emi:trinkets:${project.trinkets_version}") {
-		exclude group: 'net.fabricmc'
-		exclude group: 'net.fabricmc.fabric-api'
+		exclude group: "net.fabricmc"
+		exclude group: "net.fabricmc.fabric-api"
+		exclude group: "com.terraformersmc"
 	}
-	modImplementation "dev.onyxstudios.cardinal-components-api:cardinal-components-base:${project.cca_version}"
-	modImplementation "dev.onyxstudios.cardinal-components-api:cardinal-components-entity:${project.cca_version}"
+	modImplementation("dev.onyxstudios.cardinal-components-api:cardinal-components-base:${project.cca_version}")
+	modImplementation("dev.onyxstudios.cardinal-components-api:cardinal-components-entity:${project.cca_version}") {
+		exclude group: "net.fabricmc"
+		exclude group: "net.fabricmc.fabric-api"
+	}
 	modImplementation("com.github.Chocohead:Fabric-ASM:v${project.fabric_asm_version}") {
-		exclude (group: "net.fabricmc.fabric-api")
+		exclude group: "net.fabricmc"
+		exclude group: "net.fabricmc.fabric-api"
 	}
-	include("com.github.Chocohead:Fabric-ASM:v${project.fabric_asm_version}")
-	modImplementation "maven.modrinth:isnrmn:v${project.isnrmn_version}"
-	implementation("com.github.LlamaLad7:MixinExtras:${project.mixin_extras_version}")
-	annotationProcessor("com.github.LlamaLad7:MixinExtras:${project.mixin_extras_version}")
+	include("com.github.Chocohead:Fabric-ASM:v${project.fabric_asm_version}") {
+		exclude group: "net.fabricmc"
+		exclude group: "net.fabricmc.fabric-api"
+	}
+	modImplementation("maven.modrinth:isnrmn:v${project.isnrmn_version}")
+	implementation("com.github.LlamaLad7:MixinExtras:${project.mixin_extras_version}") {
+		exclude group: "net.fabricmc"
+		exclude group: "net.fabricmc.fabric-api"
+	}
+	annotationProcessor("com.github.LlamaLad7:MixinExtras:${project.mixin_extras_version}") {
+		exclude group: "net.fabricmc"
+		exclude group: "net.fabricmc.fabric-api"
+	}
 }
 
 processResources {
-	inputs.property "version", project.version
+	inputs.property "version", version
 
-	filesMatching("fabric.mod.json") {
-		expand "version": project.version
+	filesMatching('quilt.mod.json') {
+		expand "version": version
 	}
 }
 
 tasks.withType(JavaCompile).configureEach {
+	it.options.encoding = "UTF-8"
 	it.options.release = 17
 }
 
 java {
+	sourceCompatibility = JavaVersion.VERSION_17
+	targetCompatibility = JavaVersion.VERSION_17
 	withSourcesJar()
 }
 
