--- a/gradle.properties
+++ b/gradle.properties
@@ -1,21 +1,15 @@
 # Done to increase the memory available to gradle.
-org.gradle.jvmargs=-Xmx1G
-
-# Fabric Properties
-	# check these on https://fabricmc.net/versions.html
-	minecraft_version=1.18.2
-	quilt_mappings=22
-	loader_version=0.14.5
+org.gradle.jvmargs = -Xmx1G
+org.gradle.parallel = true
 
 # Mod Properties
-	mod_version = 0.1.2
+	version = 0.1.2
 	maven_group = ca.rttv
 	archives_base_name = malum-fabric
 
 # Dependencies
-    fabric_version=0.50.0+1.18.2
-	fabric_asm_version=2.3
-	cca_version=4.1.4
-	trinkets_version=3.3.0
-    isnrmn_version=1_01
-    mixin_extras_version=0.0.8
+	fabric_asm_version = 2.3
+	cca_version = 4.1.4
+	trinkets_version = 3.3.1
+    isnrmn_version = 1_01
+    mixin_extras_version = 0.0.8
