--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -4,7 +4,12 @@ minecraft = "1.18.2"
 quilt_mappings = "1.18.2+build.23"
 quilt_loader = "0.16.0-beta.16"
 
-quilted_fabric_api = "1.0.0-beta.13+0.51.1-1.18.2"
+quilted_fabric_api = "1.0.0-beta.14+0.51.1-1.18.2"
+isnrmn = "v1_01"
+fabric_asm = "v2.3"
+cca = "4.1.4"
+mixin_extras = "0.0.8"
+trinkets = "3.3.1"
 
 [libraries]
 minecraft = { module = "com.mojang:minecraft", version.ref = "minecraft" }
@@ -12,6 +17,12 @@ quilt_mappings = { module = "org.quiltmc:quilt-mappings", version.ref = "quilt_m
 quilt_loader = { module = "org.quiltmc:quilt-loader", version.ref = "quilt_loader" }
 
 quilted_fabric_api = { module = "org.quiltmc.quilted-fabric-api:quilted-fabric-api", version.ref = "quilted_fabric_api" }
+isnrmn = { module = "maven.modrinth:isnrmn", version.ref = "isnrmn" }
+fabric_asm = { module = "com.github.Chocohead:Fabric-ASM", version.ref = "fabric_asm"}
+cardinal_components_base = { module = "dev.onyxstudios.cardinal-components-api:cardinal-components-base", version.ref = "cca" }
+cardinal_components_entity = { module = "dev.onyxstudios.cardinal-components-api:cardinal-components-entity", version.ref = "cca" }
+mixin_extras = { module = "com.github.LlamaLad7:MixinExtras", version.ref = "mixin_extras" }
+trinkets = { module = "dev.emi:trinkets", version.ref = "trinkets" }
 
 # If you have multiple similar dependencies, you can declare a dependency bundle and reference it on the build script with "libs.bundles.example".
 # [bundles]
