--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -10,6 +10,7 @@ fabric_asm = "v2.3"
 cca = "4.1.4"
 mixin_extras = "0.0.8"
 trinkets = "3.3.1"
+satin = "1.7.2"
 quilt_loading_screen = "3.0.0+1.18.2"
 midnightlib = "0.4.0"
 
@@ -27,6 +28,7 @@ mixin_extras = { module = "com.github.LlamaLad7:MixinExtras", version.ref = "mix
 trinkets = { module = "dev.emi:trinkets", version.ref = "trinkets" }
 quilt_loading_screen = { module = "maven.modrinth:quilt-loading-screen", version.ref = "quilt_loading_screen" }
 midnightlib = { module = "maven.modrinth:midnightlib", version.ref = "midnightlib"}
+satin = { module = "io.github.ladysnake:satin", version.ref = "satin" }
 
 # If you have multiple similar dependencies, you can declare a dependency bundle and reference it on the build script with "libs.bundles.example".
 # [bundles]
