--- a/gradle.properties
+++ b/gradle.properties
@@ -3,6 +3,6 @@
     org.gradle.parallel = true
 
 # Mod Properties
-	version = 0.1.2
+	version = b1.0
 	maven_group = ca.rttv
 	archives_base_name = malum-fabric
