--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,18 +1,18 @@
 [versions]
 # The latest versions are available at https://lambdaurora.dev/tools/import_quilt.html
-minecraft = "1.18.2"
-quilt_mappings = "1.18.2+build.23"
-quilt_loader = "0.17.0-beta.2"
+minecraft = "1.19"
+quilt_mappings = "1.19+build.1"
+quilt_loader = "0.17.1-beta.1"
 
-quilted_fabric_api = "1.0.0-beta.13+0.51.1-1.18.2"
+quilted_fabric_api = "2.0.0-alpha.2+0.55.3"
 isnrmn = "v1_01"
 fabric_asm = "v2.3"
-cca = "4.1.4"
-mixin_extras = "0.0.8"
-trinkets = "3.3.1"
-satin = "1.7.2"
-quilt_loading_screen = "3.0.0+1.18.2"
-midnightlib = "0.4.0"
+cca = "5.0.0-beta.1"
+mixin_extras = "0.0.10"
+trinkets = "3.4.0"
+satin = "1.8.0"
+quilt_loading_screen = "4.0.0+1.19"
+midnightlib = "0.5.2"
 
 [libraries]
 minecraft = { module = "com.mojang:minecraft", version.ref = "minecraft" }
