--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -14,8 +14,8 @@ quilt_loading_screen = "4.0.0+1.19"
 midnightlib = "0.5.2"
 emi = "0.2.0+1.19"
 annotations = "1.0"
-qsl = "2.0.0-beta.4+1.19"
-quilted_fabric_api = "2.0.0-alpha.3+0.55.3-1.19"
+qsl = "2.0.0-beta.10+1.19"
+quilted_fabric_api = "2.0.0-beta.4+0.57.0-1.19"
 
 [libraries]
 minecraft = { module = "com.mojang:minecraft", version.ref = "minecraft" }
