you know, the worst and best part of a bug is when you solve it, it's great because its over, but it's usually also bad because it was so simple how you didn't think of it

--- a/src/main/resources/data/malum/book_entries/ceaseless_impetus.json
+++ b/src/main/resources/data/malum/book_entries/ceaseless_impetus.json
@@ -21,7 +21,7 @@
   ],
   "translation_key": "malum.gui.book.entry.ceaseless_impetus",
   "description_translation_key": "malum.gui.book.entry.ceaseless_impetus.description",
-  "name": "ceaseless_impetus",
+  "name": "malum:ceaseless_impetus",
   "icon_stacks": [
     {
       "id": "malum:ceaseless_impetus",
